kind/phpmyadmin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -o kind
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: phpmyadmin
  name: phpmyadmin
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: phpmyadmin
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -o kind
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/sqlnetwork: "true"
        io.kompose.service: phpmyadmin
    spec:
      containers:
        - env:
            - name: MYSQL_ROOT_PASSWORD
              value: password
            - name: PMA_HOST
              value: db
            - name: PMA_PORT
              value: "3306"
          image: phpmyadmin:latest
          name: phpmyadmin
          ports:
            - containerPort: 80
          resources: {}
      restartPolicy: Always
status: {}
