kind/frontend-as-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -o kind
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: frontend-as
  name: frontend-as
spec:
  ports:
    - name: "5175"
      port: 5175
      targetPort: 80
  selector:
    io.kompose.service: frontend-as
status:
  loadBalancer: {}
