kind/frontend-na-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -o kind
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: frontend-na
  name: frontend-na
spec:
  type: NodePort
  ports:
    - name: "5174"
      port: 5174
      targetPort: 80
      nodePort: 30002
  selector:
    io.kompose.service: frontend-na
status:
  loadBalancer: {}
