kind/phpmyadmin-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: phpmyadmin
  name: phpmyadmin
spec:
  ports:
    - name: "8181"
      port: 8181
      targetPort: 80
  selector:
    io.kompose.service: phpmyadmin
status:
  loadBalancer: {}
